--- a/Odin/packages.config
+++ b/Odin/packages.config
@@ -2,12 +2,14 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="bootstrap" version="3.3.0" targetFramework="net461" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
   <package id="BuildWebCompiler" version="1.11.326" targetFramework="net461" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery" version="1.12.4" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
@@ -47,6 +49,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net461" />
   <package id="Moq" version="4.7.99" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net461" />
