--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -130,6 +130,8 @@
     <Compile Include="Core\Dtos\ConsultantsDto.cs" />
     <Compile Include="Core\Dtos\OrderDto.cs" />
     <Compile Include="Core\Dtos\OrderIndexDto.cs" />
+    <Compile Include="Core\Dtos\OrdersTransfereeDetailsServiceDto.cs" />
+    <Compile Include="Core\Dtos\OrdersTransfereeDetailsServicesDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeFamilyDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeDestinationDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeOriginDto.cs" />
@@ -141,6 +143,7 @@
     <Compile Include="Core\Dtos\ProgramManagerDto.cs" />
     <Compile Include="Core\Dtos\ManagerDto.cs" />
     <Compile Include="Core\Dtos\ManagersDto.cs" />
+    <Compile Include="Core\Dtos\RentDto.cs" />
     <Compile Include="Core\Dtos\ServiceDto.cs" />
     <Compile Include="Core\Dtos\ServicesDto.cs" />
     <Compile Include="Core\Dtos\TransfereeDto.cs" />
@@ -345,6 +348,10 @@
     <Compile Include="Persistence\Migrations\201710251727362_SeedRentData.Designer.cs">
       <DependentUpon>201710251727362_SeedRentData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201710261236309_orderItems.cs" />
+    <Compile Include="Persistence\Migrations\201710261236309_orderItems.Designer.cs">
+      <DependentUpon>201710261236309_orderItems.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\PetsRepository.cs" />
@@ -482,6 +489,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201710251727362_SeedRentData.resx">
       <DependentUpon>201710251727362_SeedRentData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201710261236309_orderItems.resx">
+      <DependentUpon>201710261236309_orderItems.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
