--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Builders\ConsultantBuilder.cs" />
     <Compile Include="Builders\ConsultantDtoBuilder.cs" />
     <Compile Include="Builders\ConsultantImportDtoBuilder.cs" />
+    <Compile Include="Builders\LeaseBuilder.cs" />
     <Compile Include="Builders\ProgramManagerDtoBuilder.cs" />
     <Compile Include="Builders\TransfereeBuilder.cs" />
     <Compile Include="Builders\OrderBuilder.cs" />
