--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -370,6 +370,10 @@
     <Compile Include="Persistence\Migrations\201710271758539_MergedMattA5.Designer.cs">
       <DependentUpon>201710271758539_MergedMattA5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201710312056472_AddNewFieldsToOrder.cs" />
+    <Compile Include="Persistence\Migrations\201710312056472_AddNewFieldsToOrder.Designer.cs">
+      <DependentUpon>201710312056472_AddNewFieldsToOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\PetsRepository.cs" />
@@ -517,6 +521,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201710271758539_MergedMattA5.resx">
       <DependentUpon>201710271758539_MergedMattA5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201710312056472_AddNewFieldsToOrder.resx">
+      <DependentUpon>201710312056472_AddNewFieldsToOrder.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
