--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -149,12 +149,14 @@
     <Compile Include="Core\Dtos\ManagerDto.cs" />
     <Compile Include="Core\Dtos\ManagersDto.cs" />
     <Compile Include="Core\Dtos\RentDto.cs" />
+    <Compile Include="Core\Dtos\AppointmentDto.cs" />
     <Compile Include="Core\Dtos\ServiceDto.cs" />
     <Compile Include="Core\Dtos\ServicesDto.cs" />
     <Compile Include="Core\Dtos\TransfereeDto.cs" />
     <Compile Include="Core\Dtos\TransfereeIndexDto.cs" />
     <Compile Include="Core\Dtos\UserDto.cs" />
     <Compile Include="Core\Models\ApplicationUser.cs" />
+    <Compile Include="Core\Models\Appointment.cs" />
     <Compile Include="Core\Models\AreaType.cs" />
     <Compile Include="Core\Models\AzureTest.cs" />
     <Compile Include="Core\Models\BrokerFeeType.cs" />
@@ -191,6 +193,7 @@
     <Compile Include="Core\Repositories\INumberOfBathroomsTypesRepository.cs" />
     <Compile Include="Core\Repositories\IOrdersRepository.cs" />
     <Compile Include="Core\Repositories\IPetsRepository.cs" />
+    <Compile Include="Core\Repositories\IAppointmentsRepository.cs" />
     <Compile Include="Core\Repositories\IServicesRepository.cs" />
     <Compile Include="Core\Repositories\IServiceTypesRepository.cs" />
     <Compile Include="Core\Repositories\ITransfereesRepository.cs" />
@@ -438,11 +441,20 @@
     <Compile Include="Persistence\Migrations\201711141303411_AddActionLabel2ServiceTypes.Designer.cs">
       <DependentUpon>201711141303411_AddActionLabel2ServiceTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201711151332369_AppointmentsTable.cs" />
+    <Compile Include="Persistence\Migrations\201711151332369_AppointmentsTable.Designer.cs">
+      <DependentUpon>201711151332369_AppointmentsTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Persistence\Migrations\201711151549288_AppointmentsDateNullable.cs" />
+    <Compile Include="Persistence\Migrations\201711151549288_AppointmentsDateNullable.Designer.cs">
+      <DependentUpon>201711151549288_AppointmentsDateNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\PetsRepository.cs" />
     <Compile Include="Persistence\HomeFindingsRepository.cs" />
+    <Compile Include="Persistence\AppointmentsRepository.cs" />
     <Compile Include="Persistence\ServicesRepository.cs" />
     <Compile Include="Persistence\ServiceTypesRepository.cs" />
     <Compile Include="Persistence\TransfereesRepository.cs" />
@@ -626,6 +638,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201711141303411_AddActionLabel2ServiceTypes.resx">
       <DependentUpon>201711141303411_AddActionLabel2ServiceTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201711151332369_AppointmentsTable.resx">
+      <DependentUpon>201711151332369_AppointmentsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201711151549288_AppointmentsDateNullable.resx">
+      <DependentUpon>201711151549288_AppointmentsDateNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
