--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -298,7 +298,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\AccountController.cs" />
     <Compile Include="Controllers\Api\ConsultantsController.cs" />
-    <Compile Include="Controllers\Api\HomeFindingPropertiesController.cs" />
+    <Compile Include="Controllers\HomeFindingPropertiesController.cs" />
     <Compile Include="Controllers\Api\ManagersController.cs" />
     <Compile Include="Controllers\Api\OrdersController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
