--- a/Odin.IntegrationTests/Odin.IntegrationTests.csproj
+++ b/Odin.IntegrationTests/Odin.IntegrationTests.csproj
@@ -181,7 +181,13 @@
     <Compile Include="Controllers\Api\ManagersControllerTests.cs" />
     <Compile Include="Extensions\HttpActionResultExtensions.cs" />
     <Compile Include="Helpers\AzureStorageEmulatorManagerTests.cs" />
+    <Compile Include="Helpers\HttpPostedFileBaseTesting.cs" />
     <Compile Include="Helpers\ResultHelper.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TestAttributes\CleanData.cs" />
     <Compile Include="Controllers\Api\OrdersControllerTests.cs" />
     <Compile Include="Controllers\OrdersControllerTests.cs" />
@@ -210,6 +216,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Domain\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\odin_login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
