--- a/Odin.ToSeWebJob/App.config
+++ b/Odin.ToSeWebJob/App.config
@@ -4,6 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="SeApiToken" value="VtADQse3uRTspdtGjSgp" />
+    <add key="BaldrApiUrl" value="https://localhost:44372/api/" />
+  </appSettings>
   <connectionStrings>
     <!-- The format of the connection string is "DefaultEndpointsProtocol=https;AccountName=NAME;AccountKey=KEY" -->
     <!-- For local execution, the value can be set either in this config file or through environment variables -->
