--- a/Odin.ToSeWebJob/Odin.ToSeWebJob.csproj
+++ b/Odin.ToSeWebJob/Odin.ToSeWebJob.csproj
@@ -148,6 +148,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigHelper.cs" />
     <Compile Include="MyBindings.cs" />
     <Compile Include="MyJobActivator.cs" />
     <Compile Include="Program.cs" />
